# CamSettingsLoader

./: .gitignore  CMakeLists.txt  CamWorker.cpp  CarWashApiClient.cpp  CarWashApiClient.h  main.cpp
